add new unit test restful api
